--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -367,5 +367,8 @@ map md console mkdir%space
 map mf console touch%space
 copymap mf nf
 map / console search%space
+#file perms
+map cm console chmod
 #move around and shit
 map cd console cd%space
+
