--- a/config/ranger/rifle.conf
+++ b/config/ranger/rifle.conf
@@ -118,8 +118,8 @@ ext midi?,        terminal, has wildmidi = wildmidi -- "$@"
 #--------------------------------------------
 # Video/Audio with a GUI
 #-------------------------------------------
-mime ^video,       has gmplayer, X, flag f = gmplayer -- "$@"
-mime ^video,       has smplayer, X, flag f = smplayer "$@"
+mime ^video|audio, has gmplayer, X, flag f = gmplayer -- "$@"
+mime ^video|audio, has smplayer, X, flag f = smplayer "$@"
 mime ^video,       has mpv,      X, flag f = mpv -- "$@"
 mime ^video,       has mpv,      X, flag f = mpv --fs -- "$@"
 mime ^video,       has mplayer2, X, flag f = mplayer2 -- "$@"
@@ -175,12 +175,11 @@ ext mobi, has ebook-viewer, X, flag f = ebook-viewer -- "$@"
 mime ^image/svg, has inkscape, X, flag f = inkscape -- "$@"
 mime ^image/svg, has display,  X, flag f = display -- "$@"
 
-
-mime ^image, has ristretto, X, flag f = ristretto "$@"
 mime ^image, has pqiv,      X, flag f = pqiv -- "$@"
 mime ^image, has sxiv,      X, flag f = sxiv -- "$@"
 mime ^image, has feh,       X, flag f = feh -- "$@"
 mime ^image, has mirage,    X, flag f = mirage -- "$@"
+mime ^image, has ristretto, X, flag f = ristretto "$@"
 mime ^image, has eog,       X, flag f = eog -- "$@"
 mime ^image, has eom,       X, flag f = eom -- "$@"
 mime ^image, has nomacs,    X, flag f = nomacs -- "$@"
