--- a/config/ranger/rc.conf
+++ b/config/ranger/rc.conf
@@ -221,15 +221,26 @@ map y copy
 map p paste
 map x cut
 map y uncut
-#make/delete files
+#make/delete/edit files
 map md console mkdir%space
-map nf console touch%space
-copymap mf nf
+map o console touch%space
+copymap o i
+map e edit
 map / console search%space
 #file perms
 map cm console chmod
 #move around and shit
 map cd console cd%space
+
+# Tagging / Marking
+map t       tag_toggle
+map ut      tag_remove
+map "<any>  tag_toggle tag=%any
+map <Space> mark_files toggle=True
+map v       mark_files all=True toggle=True
+map uv      mark_files all=True val=False
+map V       toggle_visual_mode
+map uV      toggle_visual_mode reverse=True
 
 # ===================================================================
 # == Define keys for the console
@@ -275,7 +286,6 @@ copycmap <backspace> <backspace2>
 
 # This special expression allows typing in numerals:
 cmap <allow_quantifiers> false
-
 # ===================================================================
 # == Pager Keybindings
 # ===================================================================
