--- a/config/ranger/rc.conf
+++ b/config/ranger/rc.conf
@@ -212,15 +212,13 @@ copymap K <C-U>
 #show hidden files
 map zh    set show_hidden!
 #file operations
-map <delete> delete
-copymap <delete> <backspace>
+map d delete
 map <F2> rename_append
 map br bulkrename
 #copy/paste
 map y copy
 map p paste
 map x cut
-map y uncut
 #make/delete/edit files
 map md console mkdir%space
 map o console touch%space
@@ -235,13 +233,13 @@ map cd console cd%space
 # Tagging / Marking
 map t       tag_toggle
 map ut      tag_remove
-map "<any>  tag_toggle tag=%any
+map <any>  tag_toggle tag=%any
 map <Space> mark_files toggle=True
 map v       mark_files all=True toggle=True
 map uv      mark_files all=True val=False
 map V       toggle_visual_mode
 map uV      toggle_visual_mode reverse=True
-
+map uy      unyank
 # ===================================================================
 # == Define keys for the console
 # ===================================================================
