--- a/config/ranger/rc.conf
+++ b/config/ranger/rc.conf
@@ -221,9 +221,9 @@ map p paste
 map x cut
 #make/delete/edit files
 map md console mkdir%space
-map o console touch%space
-copymap o i
+map nf console touch%space
 map e edit
+copymap i e
 map / console search%space
 #file perms
 map cm console chmod
