--- a/config/polybar/config
+++ b/config/polybar/config
@@ -48,7 +48,7 @@ font-0 = fixed:pixelsize=10;1
 font-1 = unifont:fontformat=truetype:size=8:antialias=false;0
 font-2 = siji:pixelsize=10;1
 
-tray-position = center
+tray-position = right
 tray-padding = 2
 modules-left = bspwm i3
 modules-center = mpd  
