--- a/config/polybar/config.ini
+++ b/config/polybar/config.ini
@@ -98,18 +98,11 @@ font-3 = Iosevka Nerd Font:style=Medium:size=12;3
 ; Smaller font size for shorter spaces
 font-4 = Iosevka Nerd Font:style=Medium:size=7;3
 
-[bar/ttop]
-inherit = bar/main
-modules-left = menu title filesystem colors-switch right-end-top left-end-bottom workspaces right-end-top
-modules-center = left-end-bottom mpd right-end-bottom
-modules-right = left-end-top updates volume brightness right-end-bottom left-end-top memory temperature cpu right-end-bottom left-end-top network battery date 
-enable-ipc = true
-
 [bar/top]
 inherit = bar/main
 
 modules-left = menu title right-end-top left-end-bottom workspaces right-end-top left-end-bottom colors-switch right-end-top
-modules-right = left-end-top updates right-end-bottom left-end-top temperature battery date 
+modules-right = left-end-top updates right-end-bottom left-end-top temperature battery0 battery1 date 
 enable-ipc = true
 
 [bar/bottom]
