--- a/config/polybar/modules.ini
+++ b/config/polybar/modules.ini
@@ -12,49 +12,6 @@
 
 [module/alsa]
 type = internal/alsa
-
-; Soundcard to be used
-; Usually in the format hw:# where # is the card number
-; You can find the different card numbers in `/proc/asound/cards`
-;;master-soundcard = default
-;;speaker-soundcard = default
-;;headphone-soundcard = default
-
-; Name of the master, speaker and headphone mixers
-; Use the following command to list available mixer controls:
-; $ amixer scontrols | sed -nr "s/.*'([[:alnum:]]+)'.*/\1/p"
-; If master, speaker or headphone-soundcard isn't the default, 
-; use `amixer -c # scontrols` instead where # is the number 
-; of the master, speaker or headphone soundcard respectively
-;
-; Default: Master
-;;master-mixer = Master
-
-; Optionally define speaker and headphone mixers
-; Default: none
-;;speaker-mixer = Speaker
-; Default: none
-;;headphone-mixer = Headphone
-
-; NOTE: This is required if headphone_mixer is defined
-; Use the following command to list available device controls
-; $ amixer controls | sed -r "/CARD/\!d; s/.*=([0-9]+).*name='([^']+)'.*/printf '%3.0f: %s\n' '\1' '\2'/e" | sort
-; You may also need to use `amixer -c # controls` as above for the mixer names
-; Default: none
-;;headphone-id = 9
-
-; Use volume mapping (similar to amixer -M and alsamixer), where the increase in volume is linear to the ear
-; Default: false
-;;mapped = true
-
-; Interval for volume increase/decrease (in percent points)
-; Default: 5
-;;interval = 5
-
-; Available tags:
-;   <label-volume> (default)
-;   <ramp-volume>
-;   <bar-volume>
 format-volume = <ramp-volume> <label-volume>
 format-volume-background = ${color.mb}
 format-volume-padding = ${layout.module-padding}
@@ -130,7 +87,7 @@ ramp-4 = 
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
-[module/battery]
+[module/battery1]
 type = internal/battery
 
 ; This is useful in case the battery never reports 100% charge
@@ -243,8 +200,45 @@ animation-charging-framerate = 750
 ; Framerate in milliseconds
 ;animation-discharging-framerate = 500
 
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
+[module/battery0]
+type = internal/battery
+full-at = 99
+battery = BAT0
+adapter = ACAD
+poll-interval = 2
+time-format = %H:%M
+format-charging = <animation-charging> <label-charging>
+format-charging-background = ${color.mb}
+format-charging-padding = ${layout.module-padding}
+format-discharging = <ramp-capacity> <label-discharging>
+format-discharging-background = ${color.mb}
+format-discharging-padding = ${layout.module-padding}
+label-charging = %percentage%%
+label-discharging = %percentage%%
+label-full = Fully Charged
+label-full-background = ${color.mb}
+label-full-padding = ${layout.module-padding}
+ramp-capacity-0 = 
+ramp-capacity-1 = 
+ramp-capacity-2 = 
+ramp-capacity-3 = 
+ramp-capacity-4 = 
+ramp-capacity-5 = 
+ramp-capacity-6 = 
+ramp-capacity-7 = 
+ramp-capacity-8 = 
+ramp-capacity-9 = 
+animation-charging-0 = 
+animation-charging-1 = 
+animation-charging-2 = 
+animation-charging-3 = 
+animation-charging-4 = 
+animation-charging-5 = 
+animation-charging-6 = 
+animation-charging-7 = 
+animation-charging-8 = 
+animation-charging-framerate = 750
 ;;[module/bspwm]
 ;;type = internal/bspwm
 
