--- a/config/ranger/rc.conf
+++ b/config/ranger/rc.conf
@@ -15,7 +15,7 @@ set vcs_backend_svn disabled
 # Use one of the supported image preview protocols
 set preview_images true
 # Set the preview image method
-set preview_images_method w3m
+set preview_images_method ueberzug
 
 # Delay in seconds before displaying an image with the w3m method.
 # Increase it in case of experiencing display corruption.
