--- a/config/ranger/rc.conf
+++ b/config/ranger/rc.conf
@@ -15,20 +15,10 @@ set vcs_backend_svn disabled
 # Use one of the supported image preview protocols
 set preview_images true
 # Set the preview image method
-set preview_images_method ueberzug
-
-# Delay in seconds before displaying an image with the w3m method.
-# Increase it in case of experiencing display corruption.
-set w3m_delay 0.02
-# Default iTerm2 font size (see: preview_images_method: iterm2)
-set iterm2_font_width 8
-set iterm2_font_height 11
+set preview_images_method ueberzug 
 # Use a unicode "..." character to mark cut-off filenames?
 set unicode_ellipsis false
-# BIDI support - try to properly display file names in RTL languages (Hebrew, Arabic).
-# Requires the python-bidi pip package
-set bidi_support false
-# Show dotfiles in the bookmark preview box?
+#Show dotfiles in the bookmark preview box?
 set show_hidden_bookmarks true
 # Which colorscheme to use?  These colorschemes are available by default:
 # default, jungle, snow, solarized
@@ -134,7 +124,7 @@ set metadata_deep_search false
 set clear_filters_on_dir_change false
 # Disable displaying line numbers in main column.
 # Possible values: false, absolute, relative.
-set line_numbers absolute
+set line_numbers relative
 # When line_numbers=relative show the absolute line number in the
 # current line.
 set relative_current_zero false
@@ -207,23 +197,21 @@ map H       move to=0
 map L       move to=-1
 # Jumpy boi
 map L  move to=-1
+copymap L G 
 copymap J <C-D>
 copymap K <C-U>
 #show hidden files
 map zh    set show_hidden!
-#file operations
-map d delete
-map <F2> rename_append
-map br bulkrename
 #copy/paste
 map y copy
 map p paste
 map x cut
-#make/delete/edit files
+#make/delete/rename files
+map d delete
+map <F2> rename_append
+map br bulkrename
 map md console mkdir%space
 map nf console touch%space
-map e edit
-copymap i e
 map / console search%space
 #file perms
 map cm console chmod
