--- a/config/ranger/rc.conf
+++ b/config/ranger/rc.conf
@@ -106,7 +106,7 @@ set cd_tab_case sensitive
 set cd_tab_fuzzy false
 # Avoid previewing files larger than this size, in bytes.  Use a value of 0 to
 # disable this feature.
-set preview_max_size 0
+set preview_max_size 100000000
 # The key hint lists up to this size have their sublists expanded.
 # Otherwise the submaps are replaced with "...".
 set hint_collapse_threshold 10
