--- a/config/polybar/colors.ini
+++ b/config/polybar/colors.ini
@@ -13,8 +13,7 @@
 [color]
 
 ;; Active Colors
-bg = rgba(0,0,0,0.5)
-
+bg = #000000
 fg = #bfbfbf
 ac = #000000
 mf = #000000
@@ -31,7 +30,7 @@ mf = #000000
 ;ac = #ffb300
 ;mf = #324048
 
-trans = #00000000
+trans = #000000
 white = #FFFFFF
 black = #000000
 
