--- a/config/polybar/config
+++ b/config/polybar/config
@@ -45,7 +45,7 @@ width = 1920
 height = 25
 offset-x = 0 
 offset-y = 0 
-background = ${color.bg)
+background = ${color.bg}
 foreground = ${color.fg}
 radius-top = 0
 radius-bottom = 0
