--- a/config/ranger/rc.conf
+++ b/config/ranger/rc.conf
@@ -304,6 +304,7 @@ pmap     <C-l> redraw_window
 pmap     <ESC> pager_close
 copypmap <ESC> q Q i <F3>
 pmap E      edit_file
+pmap e      edit_file
 
 # ===================================================================
 # == Taskview Keybindings
